test/arrays/vass/const-checking.aliases.good
const-checking.aliases.chpl:10: error: Cannot set a non-const reference to a const variable.
const-checking.aliases.chpl:14: error: Cannot set a non-const reference to a const variable.
